um yes, change to sb id
no need for bazaar for stuff because they dropped it fixing it a few patches ago apparently, fixed the remainder of stuff? should workTM

--- a/Sophie's Hoes/assets/minecraft/mcpatcher/cit/hypixel/tools/axes/animal/mushroom_cow_axe .properties
+++ b/Sophie's Hoes/assets/minecraft/mcpatcher/cit/hypixel/tools/axes/animal/mushroom_cow_axe .properties
@@ -1,4 +1,4 @@
 type=item
 items=minecraft:wooden_axe
-nbt.display.Name=ipattern:*mushroom cow axe*
+nbt.ExtraAttributes.id=MUSHROOM_COW_AXE
 weight=2
