Update to full 1.2
Contains updates for vacuums, adds base models, removes useless jacobs ticket files, and adds in a few materials

--- a/Sophie's Hoes/assets/minecraft/mcpatcher/cit/hypixel/tools/vacuums/infinivacuum.properties
+++ b/Sophie's Hoes/assets/minecraft/mcpatcher/cit/hypixel/tools/vacuums/infinivacuum.properties
@@ -1,4 +1,5 @@
 type=item
 items=minecraft:chest_minecart minecart_chest
-texture=infinivacuum
+texture=infinivacuum.png
+#model=vacuum.json
 nbt.ExtraAttributes.id=INFINI_VACUUM
